fix: adjust emergency image margin and banner content spacing for improved layout

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img, video {
 .Emergency ul li img {
     width: 100px;
     height: 100px;
-    margin-bottom: -10px;
+    margin-bottom: -15px;
 }
 
 .Emergency ul li a {
@@ -187,7 +187,7 @@ img, video {
     .banner-content {
         margin-left: 0;
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
     .banner-content h1 {
         font-size: 1.2em;
@@ -197,13 +197,6 @@ img, video {
     }
     .Banner-info img {
         width: 120px;
-    }
-    .Banner-info {
-        padding: 10px;
-        flex-direction: column;
-    }
-    .Banner-logo {
-        margin-bottom: 10px;
     }
 }
 /* end banner */
